HelloUltraviolet/Fixtures/RejectedSource/Statements/UnsafeRequiredOperationOwnershipDiagnostic/Source/Main.uv
//! Rejected statement specimen for unsafe-required operation diagnostic coverage.

public procedure unsafeRequiredOperationOwnershipDiagnosticReference() -> i32 {
    return transmute<i32, i32>(1)
}
